crates/lexing_new/tests/snapshots/lexer__char.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "'a'\n\n'\\xFF'\n\n'abc'\n\n'\\''\n\n'\\\\'\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : CHAR
      text : "'a'"
  position : (1, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\xFF'"
  position : (3, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'abc'"
  position : (5, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\''"
  position : (7, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : CHAR
      text : "'\\\\'"
  position : (9, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (10, 1)
     error : None
