crates/lexing_new/tests/snapshots/lexer__char_eof.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "'a\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : CHAR
      text : "'a\n"
  position : (1, 1)
     error : Some("Unterminated character literal")

annotation : ""
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (2, 1)
     error : None
