crates/lexing_new/tests/snapshots/lexer__end_of_file.snap
---
source: crates/lexing_new/tests/lexer.rs
description: ""
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (1, 1)
     error : None
