crates/lexing_new/tests/snapshots/lexer__end_of_file_annotation.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "-- Hola!\n\n{- Hello! -}\n"
expression: snapshot
snapshot_kind: text
---
annotation : "-- Hola!\n\n{- Hello! -}\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (4, 1)
     error : None
