crates/lexing_new/tests/snapshots/lexer__hole_or_lower.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "_\n\n__\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : UNDERSCORE
      text : "_"
  position : (1, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : LOWER
      text : "__"
  position : (3, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (4, 1)
     error : None
