crates/lexing_new/tests/snapshots/lexer__incomplete_token.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "{- Annotation -} Qualifier. nextToken\n\n{- Annotation -} Qualifier.{- nextToken -}\n\n{- Annotation -} Qualifier.-- nextToken\n\n{- Annotation -} Qualifier. {- nextToken -}\n\n{- Annotation -} Qualifier. -- nextToken\n"
expression: snapshot
snapshot_kind: text
---
annotation : "{- Annotation -} "
 qualifier : "Qualifier."
      kind : ERROR
      text : ""
  position : (1, 18)
     error : Some("Expected a token")

annotation : " "
 qualifier : ""
      kind : LOWER
      text : "nextToken"
  position : (1, 29)
     error : None

annotation : "\n\n{- Annotation -} "
 qualifier : "Qualifier."
      kind : ERROR
      text : ""
  position : (3, 18)
     error : Some("Expected a token")

annotation : "{- nextToken -}\n\n{- Annotation -} "
 qualifier : "Qualifier."
      kind : ERROR
      text : ""
  position : (5, 18)
     error : Some("Expected a token")

annotation : "-- nextToken\n\n{- Annotation -} "
 qualifier : "Qualifier."
      kind : ERROR
      text : ""
  position : (7, 18)
     error : Some("Expected a token")

annotation : " {- nextToken -}\n\n{- Annotation -} "
 qualifier : "Qualifier."
      kind : ERROR
      text : ""
  position : (9, 18)
     error : Some("Expected a token")

annotation : " -- nextToken\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (10, 1)
     error : None
