crates/lexing_new/tests/snapshots/lexer__integer.snap
---
source: crates/lexing_new/tests/lexer.rs
description: "123\n\n123_123\n\n00_123_123\n\n0xFFFFFF\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : INTEGER
      text : "123"
  position : (1, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : INTEGER
      text : "123_123"
  position : (3, 1)
     error : None

annotation : "\n\n"
 qualifier : ""
      kind : INTEGER
      text : "00_123_123"
  position : (5, 1)
     error : Some("Too many leading zeros")

annotation : "\n\n"
 qualifier : ""
      kind : INTEGER
      text : "0xFFFFFF"
  position : (7, 1)
     error : None

annotation : "\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : (8, 1)
     error : None
